--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<h1>CLICK THE LINKS TO SEE TWO BEARS I REALLY LIKE</h1>
-		<a href=" ">POLAR</a>
-		<a href=" ">PANDA</a>		
+		<a href="polar.html"Polar></a>
+		<a href="panda.html">PANDA</a>		
 	</body>
 </html>
