--- a/Pages.html/panda.html
+++ b/Pages.html/panda.html
@@ -6,6 +6,6 @@
 	<body>
 		<h1>Panda BEAR</h1>
 		<p>I think panda bears are cool.</p>
-		<img src=" "> 		
+		<img src="panda (1).jpg"> 		
 	</body>
 </html>
