--- a/Pages.html/panda.html
+++ b/Pages.html/panda.html
@@ -6,6 +6,7 @@
 	<body>
 		<h1>Panda BEAR</h1>
 		<p>I think panda bears are cool.</p>
-		<img src="\Bears\Resources\panda (1).jpg" width=200px height=auto> 		
+		<img src="\Bears\Resources\panda (1).jpg" width=200px height=auto> 	
+		<a href="style.css">Style></a>
 	</body>
 </html>
