--- a/Pages.html/polar.html
+++ b/Pages.html/polar.html
@@ -7,5 +7,6 @@
 		<h1>POLAR BEAR</h1>
 		<p>I think polar bears are cool.</p>
 		<img src="\Bears\Resources\polar.jpg" width=200px height=auto> 		
+		<a href="style.css">Style></a>
 	</body>
 </html>
