--- a/Pages/panda.html
+++ b/Pages/panda.html
@@ -7,6 +7,6 @@
 		<h1>Panda BEAR</h1>
 		<p>I think panda bears are cool.</p>
 		<img src="\Bears\Resources\panda.jpg" width=200px height=auto> 	
-		<a href="style.css">Style></a>
+		 <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 	</body>
 </html>
