--- a/Pages/polar.html
+++ b/Pages/polar.html
@@ -7,6 +7,6 @@
 		<h1>POLAR BEAR</h1>
 		<p>I think polar bears are cool.</p>
 		<img src="\Bears\Resources\polar.jpg" width=200px height=auto> 		
-		<a href="style.css">Style></a>
+ <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 	</body>
 </html>
