--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 		<h1>CLICK THE LINKS TO SEE TWO BEARS I REALLY LIKE</h1>
 		<a href="polar.html">Polar></a>
 		<a href="panda.html">Panda></a>	
-		<a href="style.css">Style></a>
+	 <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 	</body>
 </html>
